/* Copyright 2025 The OpenXLA Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
==============================================================================*/

syntax = "proto3";

package stream_executor;

message CudaComputeCapabilityProto {
  int32 major = 1;
  int32 minor = 2;

  enum FeatureExtension {
    // UNSPECIFIED is only needed because when this field is not set
    // it defaults to 0, but on Hopper and Blackwell we want to detect that
    // and default to ACCELERATED_FEATURES, not to NONE.
    UNSPECIFIED = 0;
    NONE = 1;
    ACCELERATED_FEATURES = 2;
    FAMILY_COMPATIBLE_FEATURES = 3;
  }

  FeatureExtension feature_extension = 3;
}
